--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.471.0",
     "react": "^18.3.1",
+    "react-color": "^2.19.3",
     "react-dom": "^18.3.1",
     "react-json-view": "^1.21.3",
     "react-router": "^7.1.1",
@@ -39,6 +40,7 @@
     "@types/diff": "^7.0.0",
     "@types/node": "^22.10.5",
     "@types/react": "^18.3.18",
+    "@types/react-color": "^3.0.13",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
