--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jotai": "^2.11.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.471.0",
+    "pica": "^9.0.1",
     "react": "^18.3.1",
     "react-color": "^2.19.3",
     "react-dom": "^18.3.1",
@@ -39,6 +40,7 @@
     "@eslint/js": "^9.17.0",
     "@types/diff": "^7.0.0",
     "@types/node": "^22.10.5",
+    "@types/pica": "^9.0.5",
     "@types/react": "^18.3.18",
     "@types/react-color": "^3.0.13",
     "@types/react-dom": "^18.3.5",
